--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>22</java.version>
 		<editorconfig.version>0.1.3</editorconfig.version>
 		<modelmapper.version>3.2.1</modelmapper.version>
+		<springdoc.version>2.6.0</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,6 +45,11 @@
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>${modelmapper.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 		<dependency>
