--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<editorconfig.version>0.1.3</editorconfig.version>
 		<springdoc.version>2.8.8</springdoc.version>
 		<modelmapper.version>3.2.3</modelmapper.version>
+		<java.version>25</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
